# USD-tutorial-cpp

1-hello_world/: CMakeLists.txt
2-hello_world_redux/: CMakeLists.txt  main.cpp
3-inspecting_and_authoring_properties/: CMakeLists.txt  main.cpp
4-referencing_layers/: main.cpp
5-traversing_stage/: main.cpp
